--- a/StepUpDE/www/templates/home.html
+++ b/StepUpDE/www/templates/home.html
@@ -1,3 +1,3 @@
-<ion-view title="Home Tab Page" id="page7">
+<ion-view title="Home" id="page7">
     <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
