--- a/StepUpDE/www/templates/stepUpDE.html
+++ b/StepUpDE/www/templates/stepUpDE.html
@@ -1,18 +1,18 @@
 <ion-view title="StepUpDE" id="page1">
     <ion-tabs class="tabs-stable tabs-icon-top" id="stepUpDE-tabs1">
-        <ion-tab title="Home " icon="ion-home" href="#/page1/page7" id="stepUpDE-tab1">
+        <ion-tab title="Home " icon="ion-home" href="#/page1/home" id="stepUpDE-tab1">
             <ion-nav-view name="tab1"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Donation" icon="ion-heart" href="#/page1/page2" id="stepUpDE-tab4">
+        <ion-tab title="Donation" icon="ion-heart" href="#/page1/donate" id="stepUpDE-tab4">
             <ion-nav-view name="tab4"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Volunteer" icon="ion-earth" href="#/page1/page3" id="stepUpDE-tab3">
+        <ion-tab title="Volunteer" icon="ion-earth" href="#/page1/volunteer" id="stepUpDE-tab3">
             <ion-nav-view name="tab3"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Network" icon="ion-android-contacts" href="#/page1/page4" id="stepUpDE-tab5">
+        <ion-tab title="Social" icon="ion-android-contacts" href="#/page1/social" id="stepUpDE-tab5">
             <ion-nav-view name="tab5"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Rewards" icon="ion-star" href="#/page1/page5" id="stepUpDE-tab6">
+        <ion-tab title="Rewards" icon="ion-star" href="#/page1/rewards" id="stepUpDE-tab6">
             <ion-nav-view name="tab6"></ion-nav-view>
         </ion-tab>
     </ion-tabs>
