--- a/StepUpDE/www/templates/reward.html
+++ b/StepUpDE/www/templates/reward.html
@@ -6,8 +6,8 @@
                 <i class="icon ion-help-circled"></i>
             </ion-item>
         </ion-list>
-        <button id="reward-button6" style="font-weight:600;font-size:15px;text-align:left;border-radius:120px 120px 120px 120px;" class="button button-energized  icon-left ion-trophy">Badges</button>
-        <button id="reward-button4" style="font-weight:600;font-size:20px;border-radius:100px 100px 100px 100px;" class="button button-assertive  button-block icon-left ion-ios-cart">Reward Store</button>
+        <a ui-sref="stepUpDE.badges" id="reward-button6" style="font-weight:600;font-size:15px;text-align:left;border-radius:120px 120px 120px 120px;" class="button button-energized  icon-left ion-trophy">Badges</a>
+        <a ui-sref="stepUpDE.rewardStore" id="reward-button4" style="font-weight:600;font-size:20px;border-radius:100px 100px 100px 100px;" class="button button-assertive  button-block icon-left ion-ios-cart">Reward Store</a>
         <ion-list id="reward-list3">
             <ion-item class="item-divider" id="reward-list-item-divider1">Recent</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item16">
