Fixed some buttons

--- a/StepUpDE/www/templates/socialFeed.html
+++ b/StepUpDE/www/templates/socialFeed.html
@@ -1,5 +1,18 @@
 <ion-view title="Social Feed" id="page4">
     <ion-content padding="true" class="has-header">
+        <form id="socialFeed-form13" class="list">
+            <ion-item class="item-avatar" id="socialFeed-list-item48">
+                <h2>Item</h2>
+            </ion-item>
+            <label class="item item-input" id="socialFeed-textarea3">
+                <span class="input-label">Text</span><textarea placeholder=""></textarea>
+            </label>
+        </form>
+        <div id="socialFeed-button-bar2" class="button-bar">
+            <button id="socialFeed-button18" style="border-radius:50px 50px 50px 50px;" class="button button-positive">Send</button>
+            <button id="socialFeed-button17" style="border-radius:50px 50px 50px 50px;" class="button button-positive  icon ion-images"></button>
+            <button id="socialFeed-button19" style="border-radius:50px 50px 50px 50px;" class="button button-positive  icon ion-android-share"></button>
+        </div>
         <div class="list card" id="socialFeed-card21">
             <ion-item class="item-avatar" id="socialFeed-list-item5">
                 <h2>Item</h2>
