--- a/StepUpDE/www/templates/login.html
+++ b/StepUpDE/www/templates/login.html
@@ -12,7 +12,7 @@
                     <input type="password" placeholder="">
                 </label>
             </ion-list>
-            <a ui-sref="stepUpDE.home" id="login-button1" style="border-radius:50px 50px 50px 50px;" class="button button-stable  button-block">Log in</a>
+            <a ui-sref="stepUpDE.home_tab1" id="login-button1" style="border-radius:50px 50px 50px 50px;" class="button button-stable  button-block">Log in</a>
             <a ui-sref="signUp" id="login-button2" class="button button-positive  button-block button-clear">Or create an account</a>
             <a ui-sref="stepUpDE.donations" id="login-button3" style="border-radius:50px 50px 50px 50px;" class="button button-royal  button-block">Donate Now!</a>
             <ion-toggle toggle-class="toggle-light" id="login-toggle1">Espanol?</ion-toggle>
