--- a/StepUpDE/www/templates/stepUpDE.html
+++ b/StepUpDE/www/templates/stepUpDE.html
@@ -1,6 +1,6 @@
 <ion-view title="StepUpDE" id="page1">
     <ion-tabs class="tabs-stable tabs-icon-top" id="stepUpDE-tabs1">
-        <ion-tab title="Home " icon="ion-home" href="#/page1/home" id="stepUpDE-tab1">
+        <ion-tab title="Home " icon="ion-home" href="#/page1/tab1/home" id="stepUpDE-tab1">
             <ion-nav-view name="tab1"></ion-nav-view>
         </ion-tab>
         <ion-tab title="Donation" icon="ion-heart" href="#/page1/donate" id="stepUpDE-tab4">
