Fixed a couple button issues

--- a/StepUpDE/www/templates/donations.html
+++ b/StepUpDE/www/templates/donations.html
@@ -1,13 +1,20 @@
 <ion-view title="Donations" id="page2">
     <ion-content padding="true" class="has-header">
         <form id="donations-form10" class="list">
+            <label class="item item-select" id="donations-select5">
+                <span class="input-label">Select Organization</span>
+                <select></select>
+            </label>
             <label class="item item-input" id="donations-input8">
                 <span class="input-label">Amount</span>
                 <input type="text" placeholder="">
             </label>
             <label class="item item-select" id="donations-select4">
                 <span class="input-label">Card Type</span>
-                <select></select>
+                <select>
+                    <option>Visa</option>
+                    <option>Master Card</option>
+                </select>
             </label>
             <label class="item item-input" id="donations-input12">
                 <span class="input-label">Card Name</span>
@@ -25,7 +32,7 @@
                 <span class="input-label">Zipcode</span>
                 <input type="text" placeholder="">
             </label>
-            <button id="donations-button15" class="button button-positive  button-block">Submit</button>
+            <a ui-sref="stepUpDE.thankYou" id="donations-button15" class="button button-positive  button-block">Submit</a>
         </form>
     </ion-content>
 </ion-view>
