--- a/StepUpDE/www/templates/thankYou.html
+++ b/StepUpDE/www/templates/thankYou.html
@@ -8,7 +8,7 @@
                 <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
             </div>
             <div class="item item-body" id="thankYou-list-item-container4">
-                <div id="thankYou-null" style="margin-top:0px;color:#000000;">
+                <div id="thankYou-markdown1" style="margin-top:0px;color:#000000;">
                     <p>Some friendly
                         <strong>markdown</strong>
                     </p>
