--- a/StepUpDE/www/templates/home.html
+++ b/StepUpDE/www/templates/home.html
@@ -1,3 +1,7 @@
-<ion-view title="Home" id="page7">
+<ion-view title="Home" hide-back-button="true" id="page7">
+    <ion-nav-buttons side="right">
+      <a class="button button-clear icon ion-android-settings" ui-sref="settings"></a>
+      <a class="button button-clear icon ion-android-exit" ui-sref="login"></a>
+    </ion-nav-buttons>
     <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
