--- a/StepUpDE/www/templates/volunteerPreferences.html
+++ b/StepUpDE/www/templates/volunteerPreferences.html
@@ -1,22 +1,23 @@
 <ion-view title="Volunteer Preferences" id="page13">
-    <ion-content padding="true" class="has-header">
-        <form id="volunteerPreferences-form6" class="list">
-            <ion-checkbox>Education</ion-checkbox>
-            <ion-checkbox>Veterans</ion-checkbox>
-            <ion-checkbox>Children &amp; Youth</ion-checkbox>
-            <ion-checkbox>Animals</ion-checkbox>
-            <ion-checkbox>Hunger</ion-checkbox>
-            <ion-checkbox>Homeless</ion-checkbox>
-            <ion-checkbox>Immigrants</ion-checkbox>
-            <ion-checkbox>Sports &amp; Recreation</ion-checkbox>
-            <ion-checkbox>Women</ion-checkbox>
-            <ion-checkbox>LGBT</ion-checkbox>
-            <ion-checkbox>Computers &amp; Technology</ion-checkbox>
-            <ion-checkbox>Disabilities</ion-checkbox>
-            <ion-checkbox>Religion</ion-checkbox>
-            <ion-checkbox>Seniors</ion-checkbox>
-            <ion-checkbox>Environment</ion-checkbox>
-            <ion-checkbox>Race &amp; Ethnicity</ion-checkbox>
-        </form>
-    </ion-content>
+  <ion-content padding="true" class="has-header">
+    <a ui-sref="stepUpDE.settings" id="preferences-button4" style="font-weight:600;font-size:20px;border-radius:100px 100px 100px 100px;" class="button button-positive button-block icon-left">Save</a>
+      <form id="volunteerPreferences-form6" class="list">
+          <ion-checkbox>Education</ion-checkbox>
+          <ion-checkbox>Veterans</ion-checkbox>
+          <ion-checkbox>Children &amp; Youth</ion-checkbox>
+          <ion-checkbox>Animals</ion-checkbox>
+          <ion-checkbox>Hunger</ion-checkbox>
+          <ion-checkbox>Homeless</ion-checkbox>
+          <ion-checkbox>Immigrants</ion-checkbox>
+          <ion-checkbox>Sports &amp; Recreation</ion-checkbox>
+          <ion-checkbox>Women</ion-checkbox>
+          <ion-checkbox>LGBT</ion-checkbox>
+          <ion-checkbox>Computers &amp; Technology</ion-checkbox>
+          <ion-checkbox>Disabilities</ion-checkbox>
+          <ion-checkbox>Religion</ion-checkbox>
+          <ion-checkbox>Seniors</ion-checkbox>
+          <ion-checkbox>Environment</ion-checkbox>
+          <ion-checkbox>Race &amp; Ethnicity</ion-checkbox>
+      </form>
+  </ion-content>
 </ion-view>
