--- a/StepUpDE/www/templates/volunteering.html
+++ b/StepUpDE/www/templates/volunteering.html
@@ -1,19 +1,17 @@
-<ion-view title="Volunteering" id="page3">
+<ion-view title="Volunteering" id="page3" ng-controller = "volunteeringCtrl">
     <ion-content padding="true" class="has-header">
         <form id="volunteering-form1" class="list">
-            <div class="spacer" style="width: 300px; height: 18px;"></div>
-            <ion-item class="item-thumbnail-left" id="volunteering-list-item1">
-                <h2>Item</h2>
-            </ion-item>
-            <ion-item class="item-thumbnail-left" id="volunteering-list-item2">
-                <h2>Item</h2>
-            </ion-item>
-            <ion-item class="item-thumbnail-left" id="volunteering-list-item3">
-                <h2>Item</h2>
-            </ion-item>
-            <ion-item class="item-thumbnail-left" id="volunteering-list-item4">
-                <h2>Item</h2>
-            </ion-item>
+            <div class="spacer" style="width: 300px; height 18px">  </div>
+            <ion-list>
+                <ion-item ng-repeat="organization in organizations">
+                <h2>{{organization.nameOfOrg}}</h2>
+                <ion-option-button class="button-assertive">
+                      Attend
+                </ion-option-button>
+                </ion-item>
+            </ion-list>
+
+
         </form>
     </ion-content>
 </ion-view>
