adding design elements

--- a/StepUpDE/www/templates/activeEvents.html
+++ b/StepUpDE/www/templates/activeEvents.html
@@ -1,5 +1,11 @@
 <ion-view title="Active Events" id="page18">
     <ion-content padding="true" class="has-header">
+      <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+        <img src="/img/UnitedWay.png"/>
+        <i class="icon ion-help-circled"></i>
+        <h1>United Way</h1>
+        <h2>Total: 100 ubucks</h2>
+      </a>
         <ion-list id="activeEvents-list12">
             <ion-item id="activeEvents-list-item42">Item 1</ion-item>
             <ion-item id="activeEvents-list-item43">Item 2</ion-item>
