--- a/StepUpDE/www/templates/reward.html
+++ b/StepUpDE/www/templates/reward.html
@@ -2,12 +2,16 @@
     <ion-content padding="true" class="has-header">
         <ion-list id="reward-list2">
           <div class="totalrewards">
-            <ion-item class="item-avatar item-icon-right" id="reward-list-item11">
-              <button ui-sref="stepUpDE.badges" id="reward-button6" style="font-weight:600;font-size:15px;text-align:left;border-radius:120px 120px 120px 120px;" class="button button-energized  icon-left ion-trophy">Badges</button>
+            <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+              <img src="/img/UnitedWay.png"/>
               <i class="icon ion-help-circled"></i>
-                <h2>Total:</h2>
+              <h1>United Way</h1>
+              <h2>Total: 100 ubucks</h2>
+            </a>
+            <a ui-sref="stepUpDE.badges" id="reward-button6" style="font-weight:600;font-size:15px;text-align:left;border-radius:120px 120px 120px 120px;" class="button button-energized button-block icon-left ion-trophy">Badges</a>
+
           </div>
-                </ion-item>
+
         <a ui-sref="stepUpDE.rewardStore" id="reward-button4" style="font-weight:600;font-size:20px;border-radius:100px 100px 100px 100px;" class="button button-assertive  button-block icon-left ion-ios-cart">Reward Store</a>
         </ion-list>
         <ion-list id="reward-list3">
