--- a/StepUpDE/www/templates/socialFeed.html
+++ b/StepUpDE/www/templates/socialFeed.html
@@ -1,9 +1,11 @@
 <ion-view title="Social Feed" id="page4">
     <ion-content padding="true" class="has-header">
         <form id="socialFeed-form13" class="list">
-            <ion-item class="item-avatar" id="socialFeed-list-item48">
-                <h2>Item</h2>
-            </ion-item>
+          <a ui-sref="stepUpDE.home" class="item item-thumbnail-left item-icon-right"  id="home-list-item11">
+            <img src="/img/UnitedWay.png"/>
+            <i class="icon ion-help-circled"></i>
+            <h1>United Way</h1>
+          </a>
             <label class="item item-input" id="socialFeed-textarea3">
                 <span class="input-label">Text</span><textarea placeholder=""></textarea>
             </label>
@@ -14,31 +16,38 @@
             <button id="socialFeed-button19" style="border-radius:50px 50px 50px 50px;" class="button button-positive  icon ion-android-share"></button>
         </div>
         <div class="list card" id="socialFeed-card21">
-            <ion-item class="item-avatar" id="socialFeed-list-item5">
-                <h2>Item</h2>
+            <ion-item class="item-thumbnail-left" id="socialFeed-list-item5">
+              <img src="/img/UnitedWay.png"/>
+                <h1>Code For Good</h1>
+                <p>Tags: software, education,teamwork</p>
             </ion-item>
-            <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-                <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+            <div style="margin: 0px; background-color: rgb(232, 235, 239); text-align: center;">
+                <img src="/img/cfgunitedway.png"/>
             </div>
             <div class="item item-body" id="socialFeed-list-item-container1">
                 <div id="socialFeed-markdown3" style="margin-top:0px;color:#000000;">
-                    <p>Some friendly
-                        <strong>markdown</strong>
+                    <p>
+                      Visted JP Morgan Chase's DTC building to particpate in the Code for Good program.
+                      This program brings various budding developers together to help our company expand our technology.
                     </p>
                 </div>
             </div>
         </div>
         <div class="list card" id="socialFeed-card22">
-            <ion-item class="item-avatar" id="socialFeed-list-item7">
-                <h2>Item</h2>
-            </ion-item>
-            <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-                <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+          <ion-item class="item-thumbnail-left" id="socialFeed-list-item5">
+            <img src="/img/UnitedWay.png"/>
+              <h1>Stand By Me</h1>
+              <p>Tags: women, empowerment</p>
+          </ion-item>
+            <div style="margin: 0px; background-color: rgb(232, 235, 239); text-align: center;">
+                <img src="/img/standbyme.png"/>
             </div>
             <div class="item item-body" id="socialFeed-list-item-container2">
                 <div id="socialFeed-markdown2" style="margin-top:0px;color:#000000;">
-                    <p>Some friendly
-                        <strong>markdown</strong>
+                    <p>
+                      Narrate Her, YWCA Delaware’s first exhibition features “twelve gifted women whose stories empower all” including, Wanda Lopez, $tand By Me’s Deputy Director.
+                      Congratulations Wanda! You can visit this exhibit at the Delaware
+                      History Museum and Old Town Hall as well as other locations throughout the state.
                     </p>
                 </div>
             </div>
