--- a/StepUpDE/www/templates/volunteering.html
+++ b/StepUpDE/www/templates/volunteering.html
@@ -1,5 +1,12 @@
 <ion-view title="Volunteering" id="page3" ng-controller = "volunteeringCtrl">
     <ion-content padding="true" class="has-header">
+      <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+        <img src="/img/UnitedWay.png"/>
+        <i class="icon ion-help-circled"></i>
+        <h1>United Way</h1>
+        <h2>Total: 100 ubucks</h2>
+      </a>
+      <a ui-sref="activeEvents" id="rewardStore-button10" style="border-radius:50px 50px 50px 50px;" class="button button-positive button-block icon ion-ios-calendar">Active Events</a>
         <form id="volunteering-form1" class="list">
             <div class="spacer" style="width: 300px; height 18px">  </div>
             <ion-list>
