--- a/StepUpDE/www/templates/badges.html
+++ b/StepUpDE/www/templates/badges.html
@@ -1,5 +1,11 @@
 <ion-view title="Badges" id="page14">
     <ion-content padding="true" class="has-header">
+      <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+        <img src="/img/UnitedWay.png"/>
+        <i class="icon ion-help-circled"></i>
+        <h1>United Way</h1>
+        <h2>Total: 100 ubucks</h2>
+      </a>
         <ion-list id="badges-list5">
             <ion-item class="item-icon-left" id="badges-list-item10">
                 <i class="icon ion-ribbon-a"></i>Badge</ion-item>
