--- a/StepUpDE/www/templates/home.html
+++ b/StepUpDE/www/templates/home.html
@@ -3,5 +3,14 @@
       <a class="button button-clear icon ion-android-settings" ui-sref="settings"></a>
       <a class="button button-clear icon ion-android-exit" ui-sref="login"></a>
     </ion-nav-buttons>
-    <ion-content padding="true" class="has-header"></ion-content>
+    <ion-content padding="true" class="has-header">
+      <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+        <img src="/img/UnitedWay.png"/>
+        <i class="icon ion-help-circled"></i>
+        <h1>United Way</h1>
+        <h2>Total: 100 ubucks</h2>
+      </a>
+      <a ui-sref="activeEvents" id="rewardStore-button10" style="border-radius:50px 50px 50px 50px;" class="button button-positive button-block icon ion-ios-calendar">Active Events</a>
+
+    </ion-content>
 </ion-view>
