--- a/StepUpDE/www/templates/login.html
+++ b/StepUpDE/www/templates/login.html
@@ -1,7 +1,9 @@
-<ion-view title="Login" hide-back-button="true" id="page9">
+<ion-view title="Login" hide-back-button="true" id="page9" ng-controller="loginCtrl">
     <ion-content padding="true" class="has-header">
         <form id="login-form2" class="list">
             <button id="login-button5" class="button button-positive  button-block icon-left ion-social-facebook">Facebook Login</button>
+            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+            <div id="status"></div>
             <ion-list id="login-list1">
                 <label class="item item-input" id="login-input2">
                     <span class="input-label">Username</span>
