--- a/StepUpDE/www/templates/rewardStore.html
+++ b/StepUpDE/www/templates/rewardStore.html
@@ -1,16 +1,18 @@
 <ion-view title="Reward Store" id="page15">
     <ion-content padding="true" class="has-header">
         <ion-list id="rewardStore-list6">
-            <ion-item class="item-avatar item-icon-right" id="rewardStore-list-item24">
-                <h2>Total:</h2>
-                <i class="icon ion-help-circled"></i>
-            </ion-item>
+          <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+            <img src="/img/UnitedWay.png"/>
+            <i class="icon ion-help-circled"></i>
+            <h1>United Way</h1>
+            <h2>Total: 100 ubucks</h2>
+          </a>
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
                 <input type="search" placeholder="">
             </label>
         </ion-list>
-        <button id="rewardStore-button10" style="border-radius:50px 50px 50px 50px;" class="button button-positive  icon ion-search">Search</button>
+        <button id="rewardStore-button10" style="border-radius:50px 50px 50px 50px;" class="button button-positive button-block icon ion-search">Search</button>
         <ion-list id="rewardStore-list7">
             <ion-item id="rewardStore-list-item25">Item 1</ion-item>
             <ion-item id="rewardStore-list-item26">Item 2</ion-item>
