--- a/StepUpDE/www/templates/settings.html
+++ b/StepUpDE/www/templates/settings.html
@@ -1,5 +1,11 @@
 <ion-view title="Settings" id="page11">
     <ion-content padding="true" class="has-header">
+      <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
+        <img src="/img/UnitedWay.png"/>
+        <i class="icon ion-help-circled"></i>
+        <h1>United Way</h1>
+        <h2>Total: 100 ubucks</h2>
+      </a>
         <button id="settings-button8" style="text-align:left;border-radius:50px 50px 50px 50px;" class="button button-stable  button-block icon-right ion-android-arrow-dropright-circle">Change Zipcode</button>
         <a ui-sref="volunteerPreferences" id="settings-button9" style="text-align:left;border-radius:50px 50px 50px 50px;" class="button button-stable  button-block icon-right ion-android-arrow-dropright-circle">Volunteer Preferences</a>
     </ion-content>
