--- a/StepUpDE/www/templates/reward.html
+++ b/StepUpDE/www/templates/reward.html
@@ -8,7 +8,7 @@
               <h1>United Way</h1>
               <h2>Total: 100 ubucks</h2>
             </a>
-            <a ui-sref="stepUpDE.badges" id="reward-button6" style="font-weight:600;font-size:15px;text-align:left;border-radius:120px 120px 120px 120px;" class="button button-energized button-block icon-left ion-trophy">Badges</a>
+            <a ui-sref="stepUpDE.badges" id="reward-button6" style="font-weight:600;font-size:20px;border-radius:120px 120px 120px 120px;" class="button button-energized button-block icon-left ion-trophy">Badges</a>
 
           </div>
 
@@ -17,17 +17,19 @@
         <ion-list id="reward-list3">
             <ion-item class="item-divider" id="reward-list-item-divider1">Recent</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item16">
-                <i class="icon ion-star"></i>Event</ion-item>
+                <i class="icon ion-star"></i>Code for Good: 10 UBucks</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item19">
-                <i class="icon ion-star"></i>Event</ion-item>
+                <i class="icon ion-star"></i>Logged In: 1 UBucks</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item21">
-                <i class="icon ion-star"></i>Event</ion-item>
+                <i class="icon ion-star"></i>Stand By Me: 10 UBucks</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item20">
-                <i class="icon ion-star"></i>Event</ion-item>
+                <i class="icon ion-star"></i>Logged In: 1 UBucks</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item18">
-                <i class="icon ion-star"></i>Event</ion-item>
+                <i class="icon ion-star"></i>Veteran's Stand Down: 10 UBucks</ion-item>
             <ion-item class="item-icon-left" id="reward-list-item17">
-                <i class="icon ion-star"></i>Event</ion-item>
+                <i class="icon ion-star"></i>Donation: 32 UBucks</ion-item>
+            <ion-item class="item-icon-left" id="reward-list-item17">
+                <i class="icon ion-star"></i>Donation: 32 UBucks</ion-item>
         </ion-list>
     </ion-content>
 </ion-view>
