--- a/StepUpDE/www/templates/socialFeed.html
+++ b/StepUpDE/www/templates/socialFeed.html
@@ -53,16 +53,18 @@
             </div>
         </div>
         <div class="list card" id="socialFeed-card23">
-            <ion-item class="item-avatar" id="socialFeed-list-item9">
-                <h2>Item</h2>
-            </ion-item>
-            <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-                <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+          <ion-item class="item-thumbnail-left" id="socialFeed-list-item5">
+            <img src="/img/UnitedWay.png"/>
+              <h1>Stand Down</h1>
+              <p>Tags: veterans, empowerment</p>
+          </ion-item>
+            <div style="margin: 0px; background-color: rgb(232, 235, 239); text-align: center;">
+                <img src="/img/delaware211.png" />
             </div>
             <div class="item item-body" id="socialFeed-list-item-container3">
                 <div id="socialFeed-markdown1" style="margin-top:0px;color:#000000;">
-                    <p>Some friendly
-                        <strong>markdown</strong>
+                    <p>#flashbackfriday 2-1-1 team spent last Friday being a resource for our Delaware veterans at the 2016 Veteran's Stand Down event.
+                      #destrongerunited #liveunited #derocksunited
                     </p>
                 </div>
             </div>
