#BestCodeEver layout done

--- a/StepUpDE/www/templates/badges.html
+++ b/StepUpDE/www/templates/badges.html
@@ -1,9 +1,9 @@
 <ion-view title="Badges" id="page14">
     <ion-content padding="true" class="has-header">
       <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
-        <img src="/img/UnitedWay.png"/>
+        <img src="/img/profilepic.png"/>
         <i class="icon ion-help-circled"></i>
-        <h1>United Way</h1>
+        <h1>Carina Blair</h1>
         <h2>Total: 100 ubucks</h2>
       </a>
         <ion-list id="badges-list5">
