--- a/StepUpDE/www/templates/home.html
+++ b/StepUpDE/www/templates/home.html
@@ -5,12 +5,30 @@
     </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
       <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
-        <img src="/img/UnitedWay.png"/>
+        <img src="/img/profilepic.png"/>
         <i class="icon ion-help-circled"></i>
-        <h1>United Way</h1>
+        <h1>Carina Blair</h1>
         <h2>Total: 100 ubucks</h2>
       </a>
       <a ui-sref="activeEvents" id="rewardStore-button10" style="border-radius:50px 50px 50px 50px;" class="button button-positive button-block icon ion-ios-calendar">Active Events</a>
-
+      <div class="card">
+        <div class="item item-divider">
+          Social Feed
+        </div>
+        <ion-item class="item-thumbnail-left" id="socialFeed-list-item5">
+          <img src="/img/UnitedWay.png"/>
+            <h1>Code For Good</h1>
+            <p>Tags: software, education,teamwork</p>
+        </ion-item>
+        <div class="item item-body" id="socialFeed-list-item-container1">
+          <div id="socialFeed-markdown3" style="margin-top:0px;color:#000000;">
+              <p>
+                Visted JP Morgan Chase's DTC building to particpate in the Code for Good program.
+                This program brings various budding developers together to help our company expand our technology.
+              </p>
+          </div>
+        </div>
+      </div>
+  </div>
     </ion-content>
 </ion-view>
