--- a/StepUpDE/www/templates/login.html
+++ b/StepUpDE/www/templates/login.html
@@ -2,8 +2,8 @@
 
     <ion-content padding="true" class="has-header">
       <a ui-sref="#" class="item item-thumbnail-left">
-        <img src="/img/UnitedWay.png"/>
-        <h1 style="color:#8C001A;font-weight:bolder;font-size:45px;font-family:cursive">StepUPDE!</h1>
+        <img src="/img/logo.png"/>
+        <h1 style="color:#8C001A;font-weight:bolder;font-size:45px;font-family:cursive">StepUp DE!</h1>
       </a>
         <form id="login-form2" class="list">
             <button id="login-button5" class="button button-positive  button-block icon-left ion-social-facebook">Facebook Login</button>
@@ -21,12 +21,12 @@
             </ion-list>
             <a ui-sref="stepUpDE.home_tab1" id="login-button1" style="border-radius:50px 50px 50px 50px;" class="button button-stable  button-block">Log in</a>
             <a ui-sref="signUp" id="login-button2" class="button button-positive  button-block button-clear">Or create an account</a>
-            <a ui-sref="stepUpDE.donations" id="login-button3" style="border-radius:50px 50px 50px 50px;" class="button button-royal  button-block">Donate Now!</a>
+            <a ui-sref="stepUpDE.donations" id="login-button3" style="border-radius:50px 50px 50px 50px;" class="button button-energized  button-block">Donate Now!</a>
             <ion-toggle toggle-class="toggle-light" id="login-toggle1">Espanol?</ion-toggle>
         </form>
-        <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left" style="height: 25px;">
-          <img src="/img/UnitedWay.png" style="height: 25px; width: 30px"/>
-          <h2>United Way</h2>
+        <a ui-sref="#" class="item item-thumbnail-left" style="height: 25px;">
+          <img src="/img/UnitedWay.png" style="height: 50px; width: 50px"/>
+          <h2>A United Way Corporation</h2>
         </a>
     </ion-content>
 </ion-view>
