--- a/StepUpDE/www/templates/reward.html
+++ b/StepUpDE/www/templates/reward.html
@@ -3,9 +3,9 @@
         <ion-list id="reward-list2">
           <div class="totalrewards">
             <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
-              <img src="/img/UnitedWay.png"/>
+              <img src="/img/profilepic.png"/>
               <i class="icon ion-help-circled"></i>
-              <h1>United Way</h1>
+              <h1>Carina Blair</h1>
               <h2>Total: 100 ubucks</h2>
             </a>
             <a ui-sref="stepUpDE.badges" id="reward-button6" style="font-weight:600;font-size:20px;border-radius:120px 120px 120px 120px;" class="button button-energized button-block icon-left ion-trophy">Badges</a>
