--- a/StepUpDE/www/templates/rewardStore.html
+++ b/StepUpDE/www/templates/rewardStore.html
@@ -2,9 +2,9 @@
     <ion-content padding="true" class="has-header">
         <ion-list id="rewardStore-list6">
           <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
-            <img src="/img/UnitedWay.png"/>
+            <img src="/img/profilepic.png"/>
             <i class="icon ion-help-circled"></i>
-            <h1>United Way</h1>
+            <h1>Carina Blair</h1>
             <h2>Total: 100 ubucks</h2>
           </a>
             <label class="item item-input">
