--- a/StepUpDE/www/templates/volunteering.html
+++ b/StepUpDE/www/templates/volunteering.html
@@ -1,9 +1,9 @@
 <ion-view title="Volunteering" id="page3" ng-controller = "volunteeringCtrl">
     <ion-content padding="true" class="has-header">
       <a ui-sref="stepUpDE.reward" class="item item-thumbnail-left item-icon-right"  id="reward-list-item11">
-        <img src="/img/UnitedWay.png"/>
+        <img src="/img/profilepic.png"/>
         <i class="icon ion-help-circled"></i>
-        <h1>United Way</h1>
+        <h1>Carina Blair</h1>
         <h2>Total: 100 ubucks</h2>
       </a>
       <a ui-sref="activeEvents" id="rewardStore-button10" style="border-radius:50px 50px 50px 50px;" class="button button-positive button-block icon ion-ios-calendar">Active Events</a>
