--- a/StepUpDE/www/templates/signUp.html
+++ b/StepUpDE/www/templates/signUp.html
@@ -19,7 +19,7 @@
                     <input type="text" placeholder="">
                 </label>
             </ion-list>
-            <a ui-sref="settings" id="signUp-button7" class="button button-stable  button-block">Sign up</a>
+            <a ui-sref="settings" id="signUp-button7" class="button button-stable  button-block" ng-click ="submit()">Sign up</a>
         </form>
     </ion-content>
 </ion-view>
