--- a/StepUpDE/www/templates/socialFeed.html
+++ b/StepUpDE/www/templates/socialFeed.html
@@ -2,9 +2,9 @@
     <ion-content padding="true" class="has-header">
         <form id="socialFeed-form13" class="list">
           <a ui-sref="stepUpDE.home" class="item item-thumbnail-left item-icon-right"  id="home-list-item11">
-            <img src="/img/UnitedWay.png"/>
+            <img src="/img/profilepic.png"/>
             <i class="icon ion-help-circled"></i>
-            <h1>United Way</h1>
+            <h1>Carina Blair</h1>
           </a>
             <label class="item item-input" id="socialFeed-textarea3">
                 <span class="input-label">Text</span><textarea placeholder=""></textarea>
@@ -12,8 +12,8 @@
         </form>
         <div id="socialFeed-button-bar2" class="button-bar">
             <button id="socialFeed-button18" style="border-radius:50px 50px 50px 50px;" class="button button-positive">Send</button>
-            <button id="socialFeed-button17" style="border-radius:50px 50px 50px 50px;" class="button button-positive  icon ion-images"></button>
-            <button id="socialFeed-button19" style="border-radius:50px 50px 50px 50px;" class="button button-positive  icon ion-android-share"></button>
+            <button id="socialFeed-button17" style="border-radius:50px 50px 50px 50px;" class="button button-assertive  icon ion-images"></button>
+            <button id="socialFeed-button19" style="border-radius:50px 50px 50px 50px;" class="button button-energized  icon ion-android-share"></button>
         </div>
         <div class="list card" id="socialFeed-card21">
             <ion-item class="item-thumbnail-left" id="socialFeed-list-item5">
